--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 	<h1>Welcome to olv.zip!</h1>
 	<p>Nothing of interest around here just yet...</p>
-	<br>
 	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio obcaecati assumenda quo exercitationem fugiat perferendis deleniti!</p>
+
+	<button class="funny_button">Click me!</button>
 </body>
