--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
-<head>
-	<title>olv.zip</title>
-	<link href="https://github.com/Ol1vver/webx-olv.zip/icon.ico">
+<html>
+	<head>
+		<title>olv.zip</title>
+		<link href="https://github.com/Ol1vver/webx-olvzip/icon.ico">
 
-	<meta name="theme-color" content="#7e50a3">
-	<meta name="description" content="cool website !!">
+		<meta name="theme-color" content="#7e50a3">
+		<meta name="description" content="cool website !!">
 
-	<link href="styles.css">
-	<script src="script.lua" />
-</head>
+		<link href="styles.css">
+		<script src="script.lua" />
+	</head>
 
-<body>
-	<h1>Welcome to olv.zip!</h1>
-	<p>Nothing of interest around here just yet...</p>
-	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio obcaecati assumenda quo exercitationem fugiat perferendis deleniti!</p>
+	<body>
+		<h1>Welcome to olv.zip!</h1>
+		<p>Nothing of interest around here just yet...</p>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio obcaecati assumenda quo exercitationem fugiat perferendis deleniti!</p>
 
-	<button class="funny_button">Click me!</button>
-</body>
+		<button class="funny_button">Click me!</button>
+	</body>
+</html>
